src/test/input/codegen/fail/declaration5.c
// Declared in other scope

#include <stdio.h>

int test(int a) {
    return a;
}

int b = a;

void main() {

}